<resources tools:ignore="MissingTranslation" xmlns:tools="http://schemas.android.com/tools">
	<string name="default_floatingview_channel_id" translatable="true">default_floatingview_channel</string>
	<string name="default_floatingview_channel_name" translatable="true">Default Channel</string>
	<string name="exit_again" translatable="true"> 再次点击退出应用</string>
	<string name="chargeTip" translatable="true">温馨提示：<br>1.代充只负责充值，如果您有其他问题，请联系我们在线客服处理，代充如果向您骚扰或者其他行为，欢迎向我们举报，举报有奖。</br>
			<br>2.代充人员不定期更换，为避免不必要的损失，每次支付请到平台提单，以官方为准，谢谢！</br>
			<br>3.代充时请向代充人员提供您的会员账号（会员账号可以在代充页面复制），以及金额！</br>
		</string>
	<string name="三军" translatable="true">三军</string>
	<string name="总和" translatable="true">总和</string>
	<string name="短牌" translatable="true">短牌</string>
	<string name="特码两面" translatable="true">特码两面</string>
	<string name="特码生肖" translatable="true">特码生肖</string>
	<string name="特码波色" translatable="true">特码波色</string>
	<string name="第一球两面" translatable="true">第一球两面</string>
	<string name="总和龙虎和" translatable="true">总和-龙虎和</string>
	<string name="第一球" translatable="true">第一球</string>
	<string name="前三" translatable="true">前三</string>
	<string name="总和大小" translatable="true">总和大小</string>
	<string name="总和大" translatable="true">总和大</string>
	<string name="总和小" translatable="true">总和小</string>
	<string name="总和单" translatable="true">总和单</string>
	<string name="总和双" translatable="true">总和双</string>
	<string name="冠亚大" translatable="true">冠亚大</string>
	<string name="冠亚小" translatable="true">冠亚小</string>
	<string name="冠亚单" translatable="true">冠亚单</string>
	<string name="冠亚双" translatable="true">冠亚双</string>
	<string name="特码色波" translatable="true">特码色波</string>
	<string name="特大" translatable="true">特大</string>
	<string name="特小" translatable="true">特小</string>
	<string name="杂六" translatable="true">杂六</string>
	<string name="特单" translatable="true">特单</string>
	<string name="特双" translatable="true">特双</string>
	<string name="鼠" translatable="true">鼠</string>
	<string name="虎" translatable="true">虎</string>
	<string name="鸡" translatable="true">鸡</string>
	<string name="狗" translatable="true">狗</string>
	<string name="红波" translatable="true">红波</string>
	<string name="蓝波" translatable="true">蓝波</string>
	<string name="绿波" translatable="true">绿波</string>
	<string name="大单" translatable="true">大单</string>
	<string name="小单" translatable="true">小单</string>
	<string name="小双" translatable="true">小双</string>
	<string name="龙虎" translatable="true">龙虎</string>
	<string name="冠军单码" translatable="true">冠军单码</string>
	<string name="冠军两面" translatable="true">冠军两面</string>
	<string name="第二球" translatable="true">第二球</string>
	<string name="第三球" translatable="true">第三球</string>
	<string name="前后和" translatable="true">前后和</string>
	<string name="前后括号和" translatable="true">前后(和)</string>
	<string name="五行" translatable="true">五行</string>
	<string name="购彩问题" translatable="true">购彩问题</string>
	<string name="赌神榜" translatable="true">赌神榜</string>
	<string name="两面" translatable="true">两面</string>
	<string name="第四球" translatable="true">第四球</string>
	<string name="第五球" translatable="true">第五球</string>
	<string name="该彩种已封盘" translatable="true">该彩种已封盘</string>
	<string name="下注中" translatable="true">下注中</string>
	<string name="下注成功" translatable="true">下注成功</string>
	<string name="投注金额不能为空" translatable="true">投注金额不能为空</string>
	<string name="第六球" translatable="true">第六球</string>
	<string name="第七球" translatable="true">第七球</string>
	<string name="第八球" translatable="true">第八球</string>
	<string name="连码" translatable="true">连码</string>
	<string name="期开奖号码" translatable="true">期开奖号码</string>
	<string name="当前彩种已封盘" translatable="true">当前彩种已封盘</string>
	<string name="请输入下注金额" translatable="true">请输入下注金额</string>
	<string name="下注失败" translatable="true">下注失败</string>
	<string name="单双和" translatable="true">单双和</string>
	<string name="正码" translatable="true">正码</string>
	<string name="投注" translatable="true">投注</string>
	<string name="暂无官方彩" translatable="true">暂无官方彩</string>
	<string name="任选二" translatable="true">任选二</string>
	<string name="任选三" translatable="true">任选三</string>
	<string name="任选四" translatable="true">任选四</string>
	<string name="任选五" translatable="true">任选五</string>
	<string name="选二连组" translatable="true">选二连组</string>
	<string name="冠军" translatable="true">冠军</string>
	<string name="第二名" translatable="true">第二名</string>
	<string name="亚军" translatable="true">亚军</string>
	<string name="第三名" translatable="true">第三名</string>
	<string name="第四名" translatable="true">第四名</string>
	<string name="申博国际" translatable="true">申博国际</string>
	<string name="盈众彩票" translatable="true">盈众彩票</string>
	<string name="下级投注明细" translatable="true">下级投注明细</string>
	<string name="下级交易明细" translatable="true">下级交易明细</string>
	<string name="已中奖" translatable="true">已中奖</string>
	<string name="未中奖" translatable="true">未中奖</string>
	<string name="全部彩票" translatable="true">全部彩票</string>
	<string name="未中" translatable="true">未中</string>
	<string name="返点" translatable="true">返点</string>
	<string name="赔率" translatable="true">赔率</string>
	<string name="快三" translatable="true">快三</string>
	<string name="六合彩" translatable="true">六合彩</string>
	<string name="pc蛋蛋" translatable="true">pc蛋蛋</string>
	<string name="快乐10分" translatable="true">快乐10分</string>
	<string name="十一选5" translatable="true">11选5</string>
	<string name="官方玩法" translatable="true">官方玩法</string>
	<string name="猜3个开奖号相加的和" translatable="true">猜3个开奖号相加的和,3-10为小,11-18为大。赔</string>
	<string name="对所有相同的三个号码" translatable="true">对所有相同的三个号码(111、222、333、444、555、666)进行投注,任意号码开出,即为中奖。赔</string>
	<string name="对相同的三个号码" translatable="true">对相同的三个号码(111、222、333、444、555、666)中的任意一个或多个进行投注,任意号码开出,即为中奖。赔</string>
	<string name="对所有的3个相连号码" translatable="true">对所有的3个相连号码(123、234、345、456)进行投注,任意号码开出,即为中奖。赔</string>
	<string name="所选号码与开奖号码的" translatable="true">从1-6中任选3个或多个号码，所选号码与开奖号码的3个号码相同,即为中奖。赔</string>
	<string name="选号与奖号" translatable="true">从11-66中任选1个或多个号码,选号与奖号(包含11-66,不限顺序)相同即为中奖(不含豹子)。赔</string>
	<string name="选择1对相同号码和1个不同号码投注" translatable="true">选择1对相同号码和1个不同号码投注,选号与奖号相同,即为中奖。赔</string>
	<string name="所选号码与开奖号码任意2个号码相同" translatable="true">从1-6中任选2个或多个号码,所选号码与开奖号码任意2个号码相同,即为中奖。赔</string>
	<string name="正特码" translatable="true">正特码</string>
	<string name="正码1到6" translatable="true">正码1~6</string>
	<string name="平特" translatable="true">平特</string>
	<string name="自选不中" translatable="true">自选不中</string>
	<string name="连肖连尾" translatable="true">连肖连尾</string>
	<string name="三中二" translatable="true">三中二</string>
	<string name="二全中" translatable="true">二全中</string>
	<string name="三全中" translatable="true">三全中</string>
	<string name="自选不中自选不中" translatable="true">[自选不中]自选不中</string>
	<string name="二连肖" translatable="true">二连肖</string>
	<string name="四连肖" translatable="true">四连肖</string>
	<string name="五连肖" translatable="true">五连肖</string>
	<string name="二连尾" translatable="true">二连尾</string>
	<string name="三连肖" translatable="true">三连肖</string>
	<string name="四全中" translatable="true">四全中</string>
	<string name="三连尾" translatable="true">三连尾</string>
	<string name="二中特" translatable="true">二中特</string>
	<string name="四连尾" translatable="true">四连尾</string>
	<string name="五连尾" translatable="true">五连尾</string>
	<string name="括号连肖连尾" translatable="true">[连肖连尾]</string>
	<string name="连肖" translatable="true">连肖</string>
	<string name="特码" translatable="true">特码</string>
	<string name="特肖" translatable="true">特肖</string>
	<string name="特串" translatable="true">特串</string>
	<string name="特码B" translatable="true">特码B</string>
	<string name="色波" translatable="true">色波</string>
	<string name="冠亚和" translatable="true">冠亚和</string>
	<string name="第五名" translatable="true">第五名</string>
	<string name="第六名" translatable="true">第六名</string>
	<string name="第七名" translatable="true">第七名</string>
	<string name="第八名" translatable="true">第八名</string>
	<string name="第九名" translatable="true">第九名</string>
	<string name="冠亚军组合" translatable="true">冠、亚军组合</string>
	<string name="第十名" translatable="true">第十名</string>
	<string name="官方投注成功" translatable="true">官方投注成功:</string>
	<string name="最高10000倍" translatable="true">最高10000倍</string>
	<string name="暂无该游戏官方玩法" translatable="true">暂无该游戏官方玩法</string>
	<string name="liangmiandisiqiu" translatable="true">两面-第四球</string>
	<string name="两面第六球" translatable="true">两面-第六球</string>
	<string name="两面第七球" translatable="true">两面-第七球</string>
	<string name="两面第八球" translatable="true">两面-第八球</string>
	<string name="连码横杠" translatable="true">连码-</string>
	<string name="开奖结果获取失败" translatable="true">开奖结果获取失败,请联系客服进行反馈</string>
	<string name="一到五球" translatable="true">1-5球</string>
	<string name="投注金额冒号" translatable="true">投注金额:</string>
	<string name="大小" translatable="true">大小</string>
	<string name="和值" translatable="true">和值</string>
	<string name="充值金额" translatable="true"> 充值金额</string>
	<string name="名词解释" translatable="true"> 名词解释</string>
	<string name="该代理的所有下级的投注总额" translatable="true"> 该代理的所有下级的投注总额</string>
	<string name="该代理的所有下级的中奖总额" translatable="true"> 该代理的所有下级的中奖总额</string>
	<string name="个人佣金冒号" translatable="true"> 个人佣金:</string>
	<string name="该代理自身个人赚到的佣金" translatable="true"> 该代理自身个人赚到的佣金</string>
	<string name="团队盈亏" translatable="true"> 团队盈亏:</string>
	<string name="该代理的所有下级的盈亏总额" translatable="true"> 该代理的所有下级的盈亏总额</string>
	<string name="团队返佣" translatable="true"> 团队返佣:</string>
	<string name="该代理的所有下级赚取的佣金总额" translatable="true"> 该代理的所有下级赚取的佣金总额</string>
	<string name="该代理的所有下级的充值总额" translatable="true"> 该代理的所有下级的充值总额</string>
	<string name="该代理的所有下级的提现总额" translatable="true"> 该代理的所有下级的提现总额</string>
	<string name="团队余额" translatable="true"> 团队余额:</string>
	<string name="该代理的所有下级总余额" translatable="true"> 该代理的所有下级总余额</string>
	<string name="该代理的所有活动赠送返点赠送" translatable="true"> 该代理的所有活动赠送+返点赠送</string>
	<string name="活动赠送" translatable="true"> 活动赠送:</string>
	<string name="注册红包生日红包活动红包晋级奖励天降红包专享红包邀请红包" translatable="true"> 注册红包+生日红包+活动红包+晋级奖励+天降红包+专享红包+邀请红包</string>
	<string name="返点赠送" translatable="true"> 返点赠送:</string>
	<string name="每日嘉奖充值返点" translatable="true"> 每日嘉奖+充值返点</string>
	<string name="晋级机制" translatable="true"> 晋级机制</string>
	<string name="开奖号码" translatable="true"> 开奖号码</string>
	<string name="中奖金额" translatable="true"> 中奖金额</string>
	<string name="会员每晋升一个等级都能获得奖励" translatable="true"> 1、会员每晋升一个等级，都能获得奖励；</string>
	<string name="充值1元可获得1成长积分" translatable="true"> 2、充值1元可获得1成长积分；</string>
	<string name="小明从VIP1直接晋升到VIP4他将能获得6元奖励" translatable="true"> 例1: 小明从VIP1直接晋升到VIP4,他将能获得1+5+10+16元奖励</string>
	<string name="小红从VIP2直接晋升到VIP4他将能获得" translatable="true">例2：小红从VIP2直接晋升到VIP4，他将能获得5+10translatable="true">1元奖励。</string>
<string name="期号" translatable="true"> 期号</string>
<string name="查看更多" translatable="true"> 查看更多</string>
<string name="报表备注" translatable="true"> 报表备注</string>
<string name="形态" translatable="true"> 形态</string>
<string name="活动说明" translatable="true"> 活动说明</string>
<string name="每日加奖在次日1200后开放领取" translatable="true"> 1、每日加奖在次日12:00后开放领取；</string>
	<string name="加奖比例是根据会员等级以及昨日累计投注金额进行一定比例的加奖棋牌电子视讯捕鱼的投注金额不计入每日嘉奖" translatable="true">2、加奖比例是根据会员等级以及昨日累计投注金额进行一定比例的加奖,棋牌，电子，视讯，捕鱼的投注金额不计入每日嘉奖;</string>
<string name="撤单和其他无效投注将不计算在内" translatable="true"> 3、撤单和其他无效投注将不计算在内；</string>
<string name="发送命令通知" translatable="true"> 发送命令通知</string>
<string name="搜索玩具" translatable="true"> 搜索玩具</string>
<string name="停止搜索玩具" translatable="true"> 停止搜索玩具</string>
<string name="保存玩具" translatable="true"> 保存玩具</string>
<string name="取回已保存的玩具" translatable="true"> 取回已保存的玩具</string>
<string name="断开玩具" translatable="true"> 断开玩具</string>
<string name="向玩具发送命令" translatable="true"> 向玩具发送命令</string>
<string name="温馨提示" translatable="true"> 温馨提示:</string>
<string name="活动返点" translatable="true"> 活动返点</string>
<string name="提现金额" translatable="true"> 提现金额</string>
<string name="此处盈亏包含个人所得佣金请勿误算" translatable="true"> 此处盈亏包含个人所得佣金,请勿误算!</string>
<string name="活动赠送返点赠送" translatable="true"> 活动赠送+返点赠送</string>
</resources>