<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".uuuu.iuymn.mkjnb.test.TestActivity">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/发送命令通知"
            />
    <Button
        android:id="@+id/search_toy_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/搜索玩具"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/停止搜索玩具"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/保存玩具"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/取回已保存的玩具"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/断开玩具"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/向玩具发送命令"
        />
</LinearLayout>