<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/white"
    android:paddingBottom="30dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:orientation="horizontal">
      <ImageView
          android:layout_width="18dp"
          android:layout_height="18dp"
          android:contentDescription="TODO" android:src="@drawable/bule_x"
          android:layout_gravity="center"
          android:layout_marginRight="30dp"
          android:visibility="invisible"
          />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="14sp"
            android:textColor="#4e89d6"
            android:text="@string/报表备注"
            android:gravity="center"
            />
      <ImageView
          android:layout_width="18dp"
          android:layout_height="18dp"
          android:contentDescription="TODO" android:src="@drawable/bule_x"
          android:layout_gravity="center"
          android:id="@+id/dismiss"
          android:layout_marginRight="30dp"
          />
  </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginLeft="12dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="@string/温馨提示"
            android:textColor="#a52424"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_weight="1"

            android:textSize="14sp"
            android:text="@string/此处盈亏包含个人所得佣金请勿误算"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginLeft="12dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="@string/活动返点"
            android:textColor="#a52424"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_weight="1"
            android:textSize="14sp"
            android:text="@string/活动赠送返点赠送"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginLeft="12dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="@string/活动赠送"
            android:textColor="#a52424"
            android:layout_gravity="center"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_weight="1"
            android:textSize="14sp"
            android:text="@string/注册红包生日红包活动红包晋级奖励天降红包专享红包邀请红包"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginLeft="12dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="@string/返点赠送"
            android:textColor="#a52424"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_weight="1"
            android:textSize="14sp"
            android:text="@string/每日嘉奖充值返点"
            />
    </LinearLayout>
</LinearLayout>