<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">
      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          android:layout_gravity="center"
          android:background="#efefed">
            <TextView
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:paddingTop="8dp"
          android:paddingBottom="8dp"
          android:layout_weight="2"
          android:gravity="center"
          android:text="@string/期号"
          />
          <TextView
              android:layout_width="0dp"
              android:layout_height="match_parent"
              android:paddingTop="8dp"
              android:paddingBottom="8dp"
              android:layout_weight="2"
              android:gravity="center"
              android:text="@string/开奖号码"
              />
          <TextView
              android:layout_width="0dp"
              android:layout_height="match_parent"
              android:paddingTop="8dp"
              android:paddingBottom="8dp"
              android:layout_weight="1"
              android:gravity="center"
              android:text="@string/和值"
              />
          <TextView
              android:layout_width="0dp"
              android:layout_height="match_parent"
              android:paddingTop="8dp"
              android:paddingBottom="8dp"
              android:layout_weight="1"
              android:gravity="center"
              android:text="@string/大小"
              />
          <TextView
              android:layout_width="0dp"
              android:layout_height="match_parent"
              android:paddingTop="8dp"
              android:paddingBottom="8dp"
              android:layout_weight="1"
              android:gravity="center"
              android:text="@string/形态"
              />

      </LinearLayout>
    <include layout="@layout/split_horizontal"/>
    <include layout="@layout/live_open_result_loading"/>
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/today_open_result_pop_recycle"
        ></androidx.recyclerview.widget.RecyclerView>
    <include layout="@layout/split_horizontal"/>
    <com.uyt.ying.yuan.uuuu.iuymn.mkjnb.myView.MyCornerTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/查看更多"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:paddingRight="12dp"
        android:paddingLeft="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:textColor="@color/white"
        android:id="@+id/show_more"
        android:layout_gravity="center"

        />
</LinearLayout>